--- a/app/src/main/res/layout/activity_horizontal.xml
+++ b/app/src/main/res/layout/activity_horizontal.xml
@@ -9,7 +9,7 @@
         android:layout_margin="@dimen/margin_16dp"
         android:text="@string/activity_horizontal_normal"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_horizontal"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_160dp"
@@ -21,7 +21,7 @@
         android:layout_margin="@dimen/margin_16dp"
         android:text="@string/activity_horizontal_reverse"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_horizontal_reverse"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_160dp"
